deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-app
  namespace: argocd-app
  labels:
    app: argocd-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argocd-app
  template:
    metadata:
      labels:
        app: argocd-app
    spec:
      containers:
        - name: argocd-app-container
          image: nginx:latest
          ports:
            - containerPort: 80
