service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-app-service
  namespace: argocd-app
spec:
  type: ClusterIP
  selector:
    app: argocd-app
  ports:
    - port: 80
      targetPort: 3000
