httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-app-route
  namespace: argocd-app
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: default
      sectionName: http
  hostnames:
    - "argocd-app-pc.o.selise.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-app-service
          port: 80
